# AgentCaixa

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  avaliador_em_lote.py  docker-compose.infra.yml  docker-compose.yml  ingest_docx.py  perguntas.txt  perguntas_100.txt  perguntas_1000.txt  pyproject.toml  query_rewriter.py  relatorio_avaliacao.csv  relatorio_ouro_openai.csv  retriever.py
.github/workflows/: evaluate-agent.yml
chroma_db/: chroma.sqlite3
data/: normas de renda.docx  normativo.docx
frontend/: chat_app.py
prompts/: especialista_habitacional.txt  especialista_renda.txt  reescritor_tecnico.txt
rag_app/: cli.py  config.py
rag_app/agent/: __init__.py  embedding_cache.py  guardrails.py  image_vector_analysis.py  knowledge.py  llm_gateway.py  observability.py  orchestration.py  response_cache.py  scanner.py  schemas.py  semantic_memory.py  service.py  session_memory.py  vector_index.py
rag_app/api/: main.py
rag_app/ingest/: converters.py  folder_scanner.py  parser_docx.py  pipeline.py
rag_app/integrations/: __init__.py  whatsapp.py
rag_app/qa/: __init__.py
scripts/: evaluate_agent_with_judge.py
tests/: test_agent_api.py  test_agent_service.py  test_config.py  test_converters.py  test_health.py  test_image_vector_analysis.py  test_ingest_pipeline_and_scanner.py  test_llm_gateway.py  test_observability.py  test_orchestration_and_semantic_memory.py  test_parser_docx.py  test_session_memory.py  test_vector_index.py  test_whatsapp_integration.py
